--- a/src/components/ReallySection/ReallySection.css
+++ b/src/components/ReallySection/ReallySection.css
@@ -52,10 +52,10 @@ body {
     padding: 0 4vw;
 }
 
-.specialContainer,
+/* .specialContainer,
 .container {
     scroll-snap-align: start;
-}
+} */
 
 .textToLeft,
 .textToRight {
